Navbar no longer wraps on zoom.

--- a/assets/_sass/components/_navbar.scss
+++ b/assets/_sass/components/_navbar.scss
@@ -94,6 +94,7 @@
 
   &-menu {
     height: scale(2);
+    white-space: nowrap;
     @include media($not-small) {
       position: absolute;
       top: scale(-4);
